--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.1.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "express": "^4.18.2",
     "mongodb": "^5.6.0",
+    "mongoose": "^7.2.2",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
